fixing many tags in a card not overflowing correctly added smooth scroll to item

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -58,7 +58,6 @@
 .tagButton {
     background-color: rgba(0,0,0,0);
     display: inline-block;
-    margin-left: 12px;
     color: black;
     padding-top: 4px;
     padding-bottom: 4px;
@@ -72,7 +71,6 @@
 #columnsContainer {
     margin-left: 48px;
     margin-right: 48px;
-    min-height: 10px;
     margin-top: 24px;
 }
 
@@ -86,6 +84,7 @@
     box-sizing: border-box;
     box-shadow: 0px 0px 2px rgba(0,0,0,.3);
     overflow-y: scroll;
+    scroll-behavior: smooth;
   }
 
   .c1 {
@@ -101,7 +100,6 @@
   }
 
   .card {
-      position: relative;
       background-color: white;
       margin:12px;
       border: lightslategray;
@@ -115,8 +113,11 @@
     font-size: 32px;
     font-weight: bold;
     min-height: 64px;
+    display: flex;
+    align-items: center;
   }
 
   .cardTagContainer {
     height: 42px;
+    display: table;
   }
